[package]
name = "backtrace-ext"
description = "minor conveniences on top of the backtrace crate"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gankra/backtrace-ext"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.67"
